@@ -8,6 +8,8 @@ import org.hamcrest.Matcher;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.IsNull.nullValue;
 import static org.hamcrest.core.IsNull.notNullValue;
+import static org.hamcrest.core.IsNull.*;
+import static org.hamcrest.core.IsAnything.any;
 
 public class IsNullTest extends AbstractMatcherTest {
 
@@ -22,4 +24,13 @@ public class IsNullTest extends AbstractMatcherTest {
         assertThat(ANY_NON_NULL_ARGUMENT, notNullValue());
         assertThat(null, not(notNullValue()));
     }
+
+    public void testSupportsStaticTyping() {
+        requiresStringMatcher(nullValue(String.class));
+        requiresStringMatcher(notNullValue(String.class));
+    }
+
+    private void requiresStringMatcher(Matcher<String> arg) {
+        // no-op
+    }    
 }
